Paper Mario Items 0.7.3 -- Update notes