@@ -20,4 +20,4 @@ Massive thanks to Jopojelly, Cube Root, Blobwin, stormytuna, direwolf420, davidf
 
 All Paper Mario assets used in the mod belongs to Intelligent Systems and Nintendo.
 
-Playtesting is done by [url=https://steamcommunity.com/profiles/76561199690057166] Cosmiikat [/url].
+Early playtesting is done by [url=https://steamcommunity.com/profiles/76561199690057166] Cosmiikat [/url].
